[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getviews-pipeline"
version = "0.1.0"
description = "GetViews.vn Cloud Run analysis pipeline (EnsembleData + Gemini + Supabase)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "python-jose[cryptography]>=3.3.0",
  "google-genai>=0.8.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "tenacity>=8.0",
  "aiofiles>=24.0",
  "supabase>=2.0.0",
  "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["getviews_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"getviews_pipeline/prompts.py" = ["E501"]
