[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getviews-pipeline"
version = "0.1.0"
description = "GetViews.vn Cloud Run analysis pipeline (EnsembleData + Gemini + Supabase)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "python-jose[cryptography]>=3.3.0",
  "google-genai>=0.8.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "tenacity>=8.0",
  "aiofiles>=24.0",
  "supabase>=2.0.0",
  "boto3>=1.34.0",
  # D.1.1 — /script/drafts/:id/export?format=pdf (WeasyPrint chosen per D.0.iv).
  # Requires libpango-1.0-0 + libcairo2 + libpangoft2-1.0-0 in the base image
  # (see cloud-run/Dockerfile). The export endpoint returns HTTP 503 if import
  # fails so the frontend can disable the PDF button with humility copy.
  "weasyprint>=63.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23.0",
]
# Phase D.6.4 — /admin/logs panel. Optional so the base image stays lean
# for deploys that don't use the log-fetch feature. To enable:
#   1. Install with `pip install -e ".[logs]"` (or bake into Dockerfile).
#   2. Set ADMIN_LOGS_ENABLED=true on the Cloud Run service.
#   3. Grant the Cloud Run service account roles/logging.viewer (or mount
#      a dedicated SA JSON via GOOGLE_APPLICATION_CREDENTIALS).
logs = [
  "google-cloud-logging>=3.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["getviews_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"getviews_pipeline/prompts.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
